--- a/resume3/index.html
+++ b/resume3/index.html
@@ -178,10 +178,10 @@
                     <img src="./img/photo1.jpg" alt="sample1">
                 </div>
                 <div class="small" style="top:0;left:645px">
-                    <img src="/img/watch.jpg" alt="sample2">
+                    <img src="./img/watch.jpg" alt="sample2">
                 </div>
                 <div class="small" style="top:312px;left:645px">
-                    <img src="/img/computer.jpg" alt="sample3">
+                    <img src="./img/computer.jpg" alt="sample3">
                 </div>
             </div>               
         </section>
