--- a/resume4/index.html
+++ b/resume4/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>何钰婷的简历</title>
-        <link rel="stylesheet" href="./a.css">
+        <link rel="stylesheet" href="./main.css">
         <script src="//at.alicdn.com/t/font_481286_owc7kgr64vd9529.js"></script>
         <script src="//at.alicdn.com/t/font_481299_8tnpp1ib5sbawcdi.js"></script>
         <style type="text/css">
