--- a/resume4/index.html
+++ b/resume4/index.html
@@ -60,7 +60,7 @@
         <div id="siteWelcome" class="site-welcome active">
             <div class="loading"></div>
         </div>
-        <div class="topNavBar">
+        <div id="topNavBar" class="topNavBar">
             <div class="topNavBar-inner clearfix"> 
                 <a class="logo" href="#" alt="logo" style="float:left;">
                     <span class="rs">RS</span><span class="card">card</span>
@@ -233,7 +233,15 @@
         <script>
             setTimeout (function(){
                 siteWelcome.classList.remove('active')
-            }, 3000);   
+            }, 1000);
+            window.onscroll=function(){
+                //console.log(window.scrollY)
+                if(window.scrollY>0){
+                    topNavBar.classList.add('sticky')
+                }else{
+                    topNavBar.classList.remove('sticky')
+                }
+            }   
         </script>
     </body>
 </html>
