--- a/resume4/index.html
+++ b/resume4/index.html
@@ -12,7 +12,7 @@
                fill: currentColor;
                overflow: hidden;
             }
-            .site-welcome{
+            /*.site-welcome{
                 display: none;
                 position: fixed;
                 top: 0;left: 0; width: 100%;height: 100%;
@@ -53,7 +53,7 @@
                 100%{
                 width:100px;height:100px;opacity:0;
                 }
-            }
+            }*/
         </style>
     </head>
     <body>
@@ -251,17 +251,38 @@
         </section>  
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>    
         <script>
-            setTimeout (function(){
-                siteWelcome.classList.remove('active')
-            }, 1000);
-            window.onscroll=function(){
-                //console.log(window.scrollY)
-                if(window.scrollY>0){
+            let specialTags = document.querySelectorAll('[data-x]')
+            for(let i =0;i<specialTags.length; i++){
+                specialTags[i].classList.add('offset')
+            }
+            findClosest()
+            window.onscroll = function(x){
+                if(window.scrollY > 0){
                     topNavBar.classList.add('sticky')
                 }else{
                     topNavBar.classList.remove('sticky')
                 }
-            } 
+                findClosest()
+            }
+            function findClosest(){
+                let specialTags = document.querySelectorAll('[data-x]')
+                let minIndex = 0
+                for(let i =1;i<specialTags.length; i++){
+                    if(Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minIndex].offsetTop - window.scrollY)){
+                    minIndex = i
+                    }
+                }
+                // minIndex 就是里窗口顶部最近的元素
+                specialTags[minIndex].classList.remove('offset')
+                let id = specialTags[minIndex].id
+                let a = document.querySelector('a[href="#'+ id + '"]')
+                let li = a.parentNode
+                let brothersAndMe = li.parentNode.children
+                for(let i=0; i<brothersAndMe.length; i++){
+                    brothersAndMe[i].classList.remove('highlight')
+                }
+                li.classList.add('highlight')
+            }
 
 
             let liTags = document.querySelectorAll('nav.menu > ul > li')
