简单封装了一个AJAX

--- a/ajaxdemo/index.html
+++ b/ajaxdemo/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="myButton">click</button>
+    <button id="myButton">点我</button>
+    <form action="https://www.baidu.com" method="GET">
+        <input type="password" name="password">
+        <input type="submit">
+      </form>
     <script src="./main.js"></script>
 </body>
 </html>
