--- a/resume4/index.html
+++ b/resume4/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>何钰婷的简历</title>
+        <title>何钰婷的简历</title>       
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/css/swiper.min.css">
         <link rel="stylesheet" href="./main.css">
         <script src="//at.alicdn.com/t/font_481286_owc7kgr64vd9529.js"></script>
-        <script src="//at.alicdn.com/t/font_481299_8tnpp1ib5sbawcdi.js"></script>
+        <script src="//at.alicdn.com/t/font_481299_8tnpp1ib5sbawcdi.js"></script>      
         <style type="text/css">
             .icon{
                width: 1em; height: 1em;
@@ -12,48 +13,6 @@
                fill: currentColor;
                overflow: hidden;
             }
-            /*.site-welcome{
-                display: none;
-                position: fixed;
-                top: 0;left: 0; width: 100%;height: 100%;
-                background: #888;
-                z-index: 1;
-                justify-content: center;
-                align-items: center;
-            }
-            .site-welcome.active{
-                display: flex;
-            }
-            .loading{
-                width: 200px;
-                height: 200px;
-                position:relative;
-            }
-            .loading::before,.loading::after{
-                content:'';
-                background:black;
-                width:0;
-                height:0;
-                border-radius:50%;
-                position:absolute;
-                top:0;
-                left:0;
-                bottom:0;
-                right:0;
-                margin:auto;
-                animation:s 1.5s linear infinite;
-            }
-            .loading::after{
-                animation-delay:0.75s; 
-            }
-            @keyframes s{
-                0%{
-                width:0;height:0;opacity:1;
-                }
-                100%{
-                width:100px;height:100px;opacity:0;
-                }
-            }*/
         </style>
     </head>
     <body>
@@ -237,53 +196,25 @@
                     portfolioBar.className="bar state-3";
                 }
             </script>
-            <div class="works" style="height: 597px">
-                <div class="big" style="top:0;left:0">
-                    <img src="./img/photo1.jpg" alt="sample1">
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <img class="swiper-slide" src="./img/nav-demo.png">
+                    <img class="swiper-slide" src="./img/canvas.jpg">
+                    <img class="swiper-slide" src="./img/Apple-slides.png">
                 </div>
-                <div class="small" style="top:0;left:645px">
-                    <img src="./img/watch.jpg" alt="sample2">
-                </div>
-                <div class="small" style="top:312px;left:645px">
-                    <img src="./img/computer.jpg" alt="sample3">
-                </div>
-            </div>               
+                <!-- 如果需要分页器 -->
+                <div class="swiper-pagination"></div>
+            </div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>             
         </section>  
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>    
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.min.js"></script>
         <script>
             let specialTags = document.querySelectorAll('[data-x]')
             for(let i =0;i<specialTags.length; i++){
                 specialTags[i].classList.add('offset')
             }
-            findClosest()
-            window.onscroll = function(x){
-                if(window.scrollY > 0){
-                    topNavBar.classList.add('sticky')
-                }else{
-                    topNavBar.classList.remove('sticky')
-                }
-                findClosest()
-            }
-            function findClosest(){
-                let specialTags = document.querySelectorAll('[data-x]')
-                let minIndex = 0
-                for(let i =1;i<specialTags.length; i++){
-                    if(Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minIndex].offsetTop - window.scrollY)){
-                    minIndex = i
-                    }
-                }
-                // minIndex 就是里窗口顶部最近的元素
-                specialTags[minIndex].classList.remove('offset')
-                let id = specialTags[minIndex].id
-                let a = document.querySelector('a[href="#'+ id + '"]')
-                let li = a.parentNode
-                let brothersAndMe = li.parentNode.children
-                for(let i=0; i<brothersAndMe.length; i++){
-                    brothersAndMe[i].classList.remove('highlight')
-                }
-                li.classList.add('highlight')
-            }
-
 
             let liTags = document.querySelectorAll('nav.menu > ul > li')
             for(let i=0;i<liTags.length;i++){
@@ -325,5 +256,7 @@
                 }
             }
         </script>
+        <script src="./js/swiper.js"></script>
+        <script src="./js/sticky.js"></script>
     </body>
 </html>
