--- a/resume4/index.html
+++ b/resume4/index.html
@@ -194,6 +194,13 @@
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
             </div>                        
+        </section>
+        <section>
+            <h2>留言板</h2>
+            <form id="postMessagesForm" style="width:700px;height:50px;margin:20px auto;">
+                <input type="text" name="content"> 
+                <input type="submit" value="提交">
+            </form>
         </section>         
         <script>
             portfolio1.onclick=function(){
@@ -210,9 +217,11 @@
         </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>    
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.min.js"></script>
+        <script src="//cdn1.lncld.net/static/js/3.5.0/av-min.js"></script>
         <script src="./js/swiper.js"></script>
         <script src="./js/sticky.js"></script>
         <script src="./js/auto-slide-up.js"></script>
         <script src="./js/smoothly-navigation.js"></script>
+        <script src="./js/message.js"></script>
     </body>
 </html>
