添加了留言板功能

--- a/resume4/index.html
+++ b/resume4/index.html
@@ -197,6 +197,7 @@
         </section>
         <section>
             <h2>留言板</h2>
+            <ol id="messageList"></ol>
             <form id="postMessagesForm" style="width:700px;height:50px;margin:20px auto;">
                 <input type="text" name="content"> 
                 <input type="submit" value="提交">
