--- a/resume4/index.html
+++ b/resume4/index.html
@@ -195,10 +195,13 @@
                 <div class="swiper-button-next"></div>
             </div>                        
         </section>
-        <section>
+        <section class="messages">
             <h2>留言板</h2>
             <ol id="messageList"></ol>
             <form id="postMessagesForm" style="width:700px;height:50px;margin:20px auto;">
+                <label for="">用户名</label>
+                <input type="text" name="name">
+                <label for="">内容</label>
                 <input type="text" name="content"> 
                 <input type="submit" value="提交">
             </form>
