--- a/resume4/index.html
+++ b/resume4/index.html
@@ -34,7 +34,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#siteWorks">Works</a>
+                            <a href="#siteWorks">WORKS</a>
                             <ul class="submenu">
                                 <li>work1</li>
                                 <li>work2</li>
